hphp/test/zend/bad/zend-traits/bug60165b.php
<?php

trait A {
    public function bar() {}
}

class MyClass {
    use A {
        A::nonExistent as barA;
    }
}
